cmake_minimum_required(VERSION 2.6)
PROJECT(eigen3-nnls)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -frtti -fexceptions -Wno-unknown-pragmas")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")

set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT})
set(CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT})
set(CMAKE_MODULE_LINKER_FLAGS ${CMAKE_MODULE_LINKER_FLAGS_INIT})

FIND_PACKAGE(Eigen3 REQUIRED)
SET(NNLS_INSTALL_DIR "${EIGEN3_INCLUDE_DIR}/Eigen/src/NNLS")
#MESSAGE("NNLS install directory: ${NNLS_INSTALL_DIR}")

INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/src")

add_subdirectory(src)
add_subdirectory(test)

INSTALL(FILES src/nnls.h DESTINATION ${NNLS_INSTALL_DIR})
